updated signup modal

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -96,6 +96,10 @@
                 <label for="sign_up_password">Password</label>
                 <input type="password" class="form-control" id="sign_up_password" name="sign_up_password" required />
               </div>
+              <div class="form-group">
+                <label for="sign_up_password_confirm">Confirm Password</label>
+                <input type="password" class="form-control" id="sign_up_password_confirm" name="sign_up_password_confirm" required />
+              </div>
               <br />
           </div>
           <div class="modal-footer">
