--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -93,6 +93,10 @@
                 <input type="text" class="form-control" id="sign_up_email" name="sign_up_email" required />
               </div>
               <div class="form-group">
+                <label for="sign_up_birth">Date of Birth</label>
+                <input type="text" class="form-control" id="sign_up_birth" name="sign_up_birth" required />
+              </div>
+              <div class="form-group">
                 <label for="sign_up_password">Password</label>
                 <input type="password" class="form-control" id="sign_up_password" name="sign_up_password" required />
               </div>
