--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
     <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="css/header.css" />
-    <link rel="stylesheet" href="css/footer.css" />
-    <link rel="icon" href="assets/saltfavicon.png">
+    <link rel="stylesheet" href="/css/header.css" />
+    <link rel="stylesheet" href="/css/footer.css" />
+    <link rel="icon" href="/assets/saltfavicon.png">
   </head>
 
   <body>
@@ -19,7 +19,7 @@
         <div class="row">
           <div class="col-xs-3 col-sm-6">
             <div class="header_img">
-              <img src="assets/whitesalticon.png" alt="salt">
+              <img src="/assets/whitesalticon.png" alt="salt">
             </div>
           </div>
           <div class="col-xs-9 col-sm-6">
@@ -33,7 +33,7 @@
                 <% end %>
               </nav>
               <div class="header_profile">
-                <a href="#" alt="Profile Image"><img src="assets/profileImage.png" class="img-circle header_profile_image" /></a>
+                <a href="#" alt="Profile Image"><img src="/assets/profileImage.png" class="img-circle header_profile_image" /></a>
               </div>
             </div>
           </div>
@@ -42,7 +42,7 @@
     </header>
     <%= yield %>
     <footer>
-        <img src="assets/whitesalticon.png" alt="salt" class="footer_logo center-block" />
+        <img src="/assets/whitesalticon.png" alt="salt" class="footer_logo center-block" />
         <div class="footer_links container">
           <div class="row">
             <div class="col-xs-6 col-sm-3 social_links text-center">
@@ -150,7 +150,7 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <script src="js/config.js"></script>
-    <script src="js/signUpLogin.js"></script>
+    <script src="/js/config.js"></script>
+    <script src="/js/signUpLogin.js"></script>
   </body>
 </html>
