--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -3,6 +3,10 @@
   box-sizing: border-box;
 }
 
+.form-control[disabled], .form-control[readonly], fieldset[disabled] .form-control {
+  background-color: white;
+}
+
 a {
   text-decoration: none;
 }
