edited the dashboard

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
         <div class="row">
           <div class="col-xs-3 col-sm-6">
             <div class="header_img">
-              <img src="/assets/whitesalticon.png" alt="salt">
+              <a href="/"><img src="/assets/whitesalticon.png" alt="salt"></a>
             </div>
           </div>
           <div class="col-xs-9 col-sm-6">
