--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -36,8 +36,8 @@
             <input type="text" class="form-control" id="phone_profile" name="phone_profile" required />
           </div>
           <div class="form-group">
-            <label for="address_profile">Address</label>
-            <input type="text" class="form-control" id="address_profile" name="address_profile" required />
+            <label for="street_profile">Address</label>
+            <input type="text" class="form-control" id="street_profile" name="street_profile" required />
           </div>
           <div class="form-group">
             <label for="city_profile">City</label>
