--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -30,7 +30,7 @@
           </div>
           <div class="form-group">
             <label for="date_of_birth_profile">Date of Birth <span class="text-muted">(DD-MM-YYYY)</span></label>
-            <input type="text" class="form-control" value="<%= @user.date_of_birth %>" id="date_of_birth_profile" name="date_of_birth_profile" required />
+            <input type="text" class="form-control" value="<%= @user.date_of_birth.strftime('%e-%m-%Y') %>" id="date_of_birth_profile" name="date_of_birth_profile" required />
           </div>
           <div class="form-group">
             <label for="phone_profile">Phone Number <span class="text-muted">(XXX-XXX-XXXX)</span></label>
