fixed input fields

--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -160,11 +160,11 @@
           </div>
           <div class="form-group">
             <label for="event_food">Food/Drink</label>
-            <input type="text" id="event_food" name="event_food" class="form-control text_input" />
+            <textarea type="text" id="event_food" name="event_food" class="form-control text_input" /></textarea>
           </div>
           <div class="form-group">
             <label for="event_description">Description of Event</label>
-            <input type="text" id="event_description" name="event_description" class="form-control text_input" />
+            <textarea type="text" id="event_description" class="form-control text_input" name="event_description"></textarea>
           </div>
           <br />
       </div>
