--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -148,18 +148,18 @@
           </div>
           <div class="form-group">
             <label for="event_unlimited">No Guest Limit</label>
-            <input type="hidden" name="event_unlimited" value="false" />
-            <input type="checkbox" id="event_unlimited" name="event_unlimited" value="true" />
+            <!-- <input type="hidden" name="event_unlimited" value="false" /> -->
+            <input type="checkbox" id="event_unlimited" name="event_unlimited" />
           </div>
           <div class="form-group">
             <label for="event_children">Children Welcome</label>
-            <input type="hidden" name="event_children" value="false" />
-            <input type="checkbox" id="event_children" name="event_children" value="true" />
+            <!-- <input type="hidden" name="event_children" value="false" /> -->
+            <input type="checkbox" id="event_children" name="event_children" />
           </div>
           <div class="form-group">
             <label for="event_alcohol">Alcohol Welcome</label>
-            <input type="hidden" name="event_alcohol" value="false" />
-            <input type="checkbox" id="event_alcohol" name="event_alcohol" value="true" />
+            <!-- <input type="hidden" name="event_alcohol" value="false" /> -->
+            <input type="checkbox" id="event_alcohol" name="event_alcohol" />
           </div>
           <div class="form-group">
             <label for="event_food">Food/Drink</label>
