--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -3,11 +3,12 @@
   <link rel="stylesheet" href="/css/events/show.css" />
 <% end %>
 
-<% if @event.host_id == current_user.id %>
+<% if @event.host_id == current_user&.id %>
   <a href="#" data-toggle="modal" data-target="#eventModal"><button class="btn">Edit Event</button></a>
   <% else %>
   <a href="#" data-toggle="modal" data-target="#joinEventModal"><button class="btn">Join Event</button></a>
 <% end %>
+
 
 <div class="modal fade" id="eventModal" role="dialog">
   <div class="modal-dialog">
@@ -68,6 +69,7 @@
             <textarea type="text" id="event_description" class="form-control text_input" name="event_description"><%= @event.description %></textarea>
           </div>
           <br />
+        </form>
       </div>
       <div class="modal-footer">
         <button type="button" id="btn_event_submit" class="btn btn-default">
@@ -83,11 +85,11 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">Event</h4>
+        <h4 class="modal-title">Join Event</h4>
       </div>
       <br />
       <div class="modal-body">
-        <form method="post" action="#" enctype="multipart/form-data" id="current_event_id" data-id="<%= @event.id %>">
+        <form method="post" action="#" enctype="multipart/form-data" id="current_event_join" data-id="<%= @event.id %>">
           <div class="form-group">
             <label for="application_guests">Number of Guests</label>
             <input type="text" class="form-control" id="application_guests" name="application_guests" />
@@ -97,6 +99,7 @@
             <textarea type="text" id="application_message" class="form-control text_input" name="application_message" placeholder="Describe Guests"></textarea>
           </div>
           <br />
+        </form>
       </div>
       <div class="modal-footer">
         <button type="button" id="btn_application_submit" class="btn btn-default">
