--- a/public/css/events/index.css
+++ b/public/css/events/index.css
@@ -4,3 +4,29 @@
   background-size: cover;
   height: 300px;
 }
+
+.eventContainer {
+  display: flex;
+  height: 500px;
+  flex-direction: column;
+  border: solid 2px black;
+}
+
+.eventContainer .imgContainer {
+  background-image: url("../../assets/Indianapolis.jpg");
+  background-position: center;
+  background-size: cover;
+  flex: 2;
+}
+
+.eventContainer .descContainer {
+  flex: 1;
+}
+
+.eventContainer .descContainer img {
+  width: 70px;
+}
+
+.eventContainer .descContainer .event_title {
+  margin: 10px 0;
+}
