--- a/public/css/events/index.scss
+++ b/public/css/events/index.scss
@@ -6,9 +6,10 @@
 }
 .eventContainer {
   display: flex;
-  height: 500px;
+  height: 350px;
   flex-direction: column;
-  border: solid 2px black;
+  border: solid 1px gray;
+  margin-bottom: 30px;
   .imgContainer {
     background-image: url('../../assets/Indianapolis.jpg');
     background-position: center;
@@ -31,7 +32,7 @@
     }
     .watchIcon {
       position: absolute;
-      top: 5px;
+      top: 7px;
       right: 25px;
       font-size: 30px;
       color: white;
@@ -45,23 +46,35 @@
     flex: 1;
     display: flex;
     flex-direction: column;
+    padding: 10px;
+    margin-top: 5px;
     .profileContainer {
       display: flex;
       flex-direction: row;
       flex: 1;
       .thumbnailContainer {
         flex: 1;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         img {
           height: 100%;
           width: 100%;
         }
       }
       .nameContainer {
-        flex: 2;
+        flex: 5;
+        display: flex;
+        align-items: center;
+        .event_host {
+          margin: 10px 0 10px 10px;
+        }
       }
     }
     .eventDescContainer {
       flex: 2;
+      display: flex;
+      flex-direction: column;
       .event_title {
         margin: 10px 0;
       }
