--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -130,49 +130,53 @@
       </div>
       <br />
       <div class="modal-body">
-        <form method="post" action="#" enctype="multipart/form-data">
+        <form method="post" action="#" id="myForm" name="myForm" enctype="multipart/form-data">
           <div class="form-group">
-            <label for="event_title">Event Title</label>
-            <input type="text" class="form-control" id="event_title" name="event_title" required />
+            <label for="title">Event Title</label>
+            <input type="text" class="form-control" id="title" name="title" required />
           </div>
           <div class="form-group">
-            <label for="event__date">Event Date</label>
-            <input type="text" class="form-control flatpickr" id="event_date" name="event__date" data-date-format="d-m-Y" />
+            <label for="images_files">Event Image</label>
+            <input type="file" class="form-control" name="images_files" id="images_files" />
           </div>
           <div class="form-group">
-            <label for="event_time">Event Time</label>
-            <input type="text" data-enable-time="true" data-no-calendar="true" value="17:00" class="form-control flatpickr" id="event_time" name="event_time" required />
+            <label for="date">Event Date</label>
+            <input type="text" class="form-control flatpickr" id="date" name="date" data-date-format="d-m-Y" />
           </div>
           <div class="form-group">
-            <label for="event_number_guests">Number Of Guests</label>
-            <input type="text" class="form-control" id="event_number_guests" name="event_number_guests" required />
+            <label for="time">Event Time</label>
+            <input type="text" data-enable-time="true" data-no-calendar="true" value="17:00" class="form-control flatpickr" id="time" name="time" required />
           </div>
           <div class="form-group">
-            <label for="event_unlimited">No Guest Limit</label>
+            <label for="guest_limit">Number Of Guests</label>
+            <input type="text" class="form-control" id="guest_limit" name="guest_limit" required />
+          </div>
+          <div class="form-group">
+            <label for="unlimited_guests">No Guest Limit</label>
             <!-- <input type="hidden" name="event_unlimited" value="false" /> -->
-            <input type="checkbox" id="event_unlimited" name="event_unlimited" />
+            <input type="checkbox" id="unlimited_guests" name="unlimited_guests" />
           </div>
           <div class="form-group">
-            <label for="event_children">Children Welcome</label>
+            <label for="allow_children">Children Welcome</label>
             <!-- <input type="hidden" name="event_children" value="false" /> -->
-            <input type="checkbox" id="event_children" name="event_children" />
+            <input type="checkbox" id="allow_children" name="allow_children" />
           </div>
           <div class="form-group">
-            <label for="event_alcohol">Alcohol Welcome</label>
+            <label for="alcohol_allowed">Alcohol Welcome</label>
             <!-- <input type="hidden" name="event_alcohol" value="false" /> -->
-            <input type="checkbox" id="event_alcohol" name="event_alcohol" />
+            <input type="checkbox" id="alcohol_allowed" name="alcohol_allowed" />
           </div><div class="form-group">
-            <label for="event_filter">Guests Need To Be Approved <span class="text-muted">(Cannot Be Changed Once Created)</span></label>
+            <label for="filter_guests">Guests Need To Be Approved <span class="text-muted">(Cannot Be Changed Once Created)</span></label>
             <!-- <input type="hidden" name="event_alcohol" value="false" /> -->
-            <input type="checkbox" id="event_filter" name="event_filter" />
+            <input type="checkbox" id="filter_guests" name="filter_guests" />
           </div>
           <div class="form-group">
-            <label for="event_food">Food/Drink</label>
-            <textarea type="text" id="event_food" name="event_food" class="form-control text_input" /></textarea>
+            <label for="food">Food/Drink</label>
+            <textarea type="text" id="food" name="food" class="form-control text_input" /></textarea>
           </div>
           <div class="form-group">
-            <label for="event_description">Description Of Event</label>
-            <textarea type="text" id="event_description" class="form-control text_input" name="event_description"></textarea>
+            <label for="description">Description Of Event</label>
+            <textarea type="text" id="description" class="form-control text_input" name="description"></textarea>
           </div>
           <br />
         </form>
@@ -190,8 +194,9 @@
   <% content_for :scripts do %>
     <script src="/js/flatpickr.min.js"></script>
     <script src="/js/dashboard/dashboard.js"></script>
+    <script src="/js/configImages.js"></script>
     <script type="text/javascript">
-        $("#event_date").flatpickr();
-        $("#event_time").flatpickr();
+        $("#date").flatpickr();
+        $("#time").flatpickr();
     </script>
   <% end %>
