--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -17,36 +17,40 @@
       <div class="modal-body">
         <form method="post" action="#" id="current_profile" data-id="<%= @user.id %>" enctype="multipart/form-data">
           <div class="form-group">
-            <label for="first_name_profile">First Name</label>
-            <input type="text" class="form-control" value="<%= @user.first_name %>" id="first_name_profile" name="first_name_profile" required />
+            <label for="first_name">First Name</label>
+            <input type="text" class="form-control" value="<%= @user.first_name %>" id="first_name" name="first_name" required />
           </div>
           <div class="form-group">
-            <label for="last_name_profile">Last Name</label>
-            <input type="text" class="form-control" value="<%= @user.last_name %>" id="last_name_profile" name="last_name_profile" required />
+            <label for="last_name">Last Name</label>
+            <input type="text" class="form-control" value="<%= @user.last_name %>" id="last_name" name="last_name" required />
           </div>
           <div class="form-group">
-            <label for="email_profile">Email</label>
-            <input type="text" class="form-control" value="<%= @user.email %>" id="email_profile" name="email_profile" required />
+            <label for="email">Email</label>
+            <input type="text" class="form-control" value="<%= @user.email %>" id="email" name="email" required />
           </div>
           <div class="form-group">
-            <label for="date_of_birth_profile">Date Of Birth <span class="text-muted">(DD-MM-YYYY)</span></label>
-            <input type="text" class="form-control" value="<%= @user.date_of_birth.strftime('%e-%m-%Y') %>" id="date_of_birth_profile" name="date_of_birth_profile" required />
+            <label for="date_of_birth">Date Of Birth <span class="text-muted">(DD-MM-YYYY)</span></label>
+            <input type="text" class="form-control" value="<%= @user.date_of_birth.strftime('%e-%m-%Y') %>" id="date_of_birth" name="date_of_birth" required />
           </div>
           <div class="form-group">
-            <label for="phone_profile">Phone Number <span class="text-muted">(XXX-XXX-XXXX)</span></label>
-            <input type="text" class="form-control" value="<%= @user&.phone %>" id="phone_profile" name="phone_profile" required />
+            <label for="images_files_profile">Profile Image</label>
+            <input type="file" class="form-control" name="images_files_profile" id="images_files_profile" />
           </div>
           <div class="form-group">
-            <label for="street_profile">Address</label>
-            <input type="text" class="form-control" id="street_profile" value="<%= @user&.address&.street %>" name="street_profile" required />
+            <label for="phone">Phone Number <span class="text-muted">(XXX-XXX-XXXX)</span></label>
+            <input type="text" class="form-control" value="<%= @user&.phone %>" id="phone" name="phone" required />
           </div>
           <div class="form-group">
-            <label for="city_profile">City</label>
-            <input type="text" class="form-control" value="<%= @user&.address&.city %>" id="city_profile" name="city_profile" required />
+            <label for="street">Address</label>
+            <input type="text" class="form-control" id="street" value="<%= @user&.address&.street %>" name="street" required />
           </div>
           <div class="form-group">
-            <label for="state_profile" >State</label>
-            <select id="state_profile" name="state_profile" selected="<%= @user&.address&.state %>" value="<%= @user&.address&.state %>" class="form-control">
+            <label for="city">City</label>
+            <input type="text" class="form-control" value="<%= @user&.address&.city %>" id="city" name="city" required />
+          </div>
+          <div class="form-group">
+            <label for="state" >State</label>
+            <select id="state" name="state" selected="<%= @user&.address&.state %>" value="<%= @user&.address&.state %>" class="form-control">
               <% if @user&.address %>
                 <option selected value><%= @user&.address&.state %></option>
               <% else %>
@@ -106,8 +110,8 @@
             </select>
           </div>
           <div class="form-group">
-            <label for="zip_profile">Zip Code</label>
-            <input type="text" class="form-control" value="<%= @user&.address&.zip %>" id="zip_profile" name="zip_profile" required />
+            <label for="zip">Zip Code</label>
+            <input type="text" class="form-control" value="<%= @user&.address&.zip %>" id="zip" name="zip" required />
           </div>
           <br />
         </form>
