--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -18,19 +18,19 @@
         <form method="post" action="#" id="current_profile" data-id="<%= @user.id %>" enctype="multipart/form-data">
           <div class="form-group">
             <label for="first_name">First Name</label>
-            <input type="text" class="form-control" value="<%= @user.first_name %>" id="first_name" name="first_name" required />
+            <input type="text" class="form-control" value="<%= @user.first_name %>" id="first_name" name="first_name"  />
           </div>
           <div class="form-group">
             <label for="last_name">Last Name</label>
-            <input type="text" class="form-control" value="<%= @user.last_name %>" id="last_name" name="last_name" required />
+            <input type="text" class="form-control" value="<%= @user.last_name %>" id="last_name" name="last_name"  />
           </div>
           <div class="form-group">
             <label for="email">Email</label>
-            <input type="text" class="form-control" value="<%= @user.email %>" id="email" name="email" required />
+            <input type="text" class="form-control" value="<%= @user.email %>" id="email" name="email"  />
           </div>
           <div class="form-group">
             <label for="date_of_birth">Date Of Birth <span class="text-muted">(DD-MM-YYYY)</span></label>
-            <input type="text" class="form-control" value="<%= @user.date_of_birth.strftime('%e-%m-%Y') %>" id="date_of_birth" name="date_of_birth" required />
+            <input type="text" class="form-control" value="<%= @user.date_of_birth.strftime('%e-%m-%Y') %>" id="date_of_birth" name="date_of_birth"  />
           </div>
           <div class="form-group">
             <label for="images_files_profile">Profile Image</label>
@@ -38,15 +38,15 @@
           </div>
           <div class="form-group">
             <label for="phone">Phone Number <span class="text-muted">(XXX-XXX-XXXX)</span></label>
-            <input type="text" class="form-control" value="<%= @user&.phone %>" id="phone" name="phone" required />
+            <input type="text" class="form-control" value="<%= @user&.phone %>" id="phone" name="phone"  />
           </div>
           <div class="form-group">
             <label for="street">Address</label>
-            <input type="text" class="form-control" id="street" value="<%= @user&.address&.street %>" name="street" required />
+            <input type="text" class="form-control" id="street" value="<%= @user&.address&.street %>" name="street"  />
           </div>
           <div class="form-group">
             <label for="city">City</label>
-            <input type="text" class="form-control" value="<%= @user&.address&.city %>" id="city" name="city" required />
+            <input type="text" class="form-control" value="<%= @user&.address&.city %>" id="city" name="city"  />
           </div>
           <div class="form-group">
             <label for="state" >State</label>
@@ -111,7 +111,7 @@
           </div>
           <div class="form-group">
             <label for="zip">Zip Code</label>
-            <input type="text" class="form-control" value="<%= @user&.address&.zip %>" id="zip" name="zip" required />
+            <input type="text" class="form-control" value="<%= @user&.address&.zip %>" id="zip" name="zip"  />
           </div>
           <br />
         </form>
@@ -134,10 +134,10 @@
       </div>
       <br />
       <div class="modal-body">
-        <form method="post" action="#" id="myForm" name="myForm" enctype="multipart/form-data">
+        <form method="post" action="#" enctype="multipart/form-data">
           <div class="form-group">
             <label for="title">Event Title</label>
-            <input type="text" class="form-control" id="title" name="title" required />
+            <input type="text" class="form-control" id="title" name="title"  />
           </div>
           <div class="form-group">
             <label for="images_files">Event Image</label>
@@ -149,29 +149,98 @@
           </div>
           <div class="form-group">
             <label for="time">Event Time</label>
-            <input type="text" data-enable-time="true" data-no-calendar="true" value="17:00" class="form-control flatpickr" id="time" name="time" required />
+            <input type="text" data-enable-time="true" data-no-calendar="true" value="17:00" class="form-control flatpickr" id="time" name="time"  />
+          </div>
+          <div class="form-group">
+            <label for="user_address">Event Will Be Hosted At Your Address</label>
+            <input type="checkbox" id="user_address" name="user_address" />
+          </div>
+          <div class="form-group">
+            <label for="street">Address</label>
+            <input type="text" class="form-control" id="streetEvent" name="street"  />
+          </div>
+          <div class="form-group">
+            <label for="city">City</label>
+            <input type="text" class="form-control" id="cityEvent" name="city"  />
+          </div>
+          <div class="form-group">
+            <label for="state" >State</label>
+            <select id="stateEvent" name="state" class="form-control">
+              <option disabled selected value> -- select a state -- </option>
+              <option value="Alabama">Alabama</option>
+              <option value="Alaska">Alaska</option>
+              <option value="Arizona">Arizona</option>
+              <option value="Arkansas">Arkansas</option>
+              <option value="California">California</option>
+              <option value="Colorado">Colorado</option>
+              <option value="Connecticut">Connecticut</option>
+              <option value="Delaware">Delaware</option>
+              <option value="District Of Columbia">District Of Columbia</option>
+              <option value="Florida">Florida</option>
+              <option value="Georgia">Georgia</option>
+              <option value="Hawaii">Hawaii</option>
+              <option value="Idaho">Idaho</option>
+              <option value="Illinois">Illinois</option>
+              <option value="Indiana">Indiana</option>
+              <option value="Iowa">Iowa</option>
+              <option value="Kansas">Kansas</option>
+              <option value="Kentucky">Kentucky</option>
+              <option value="Louisiana">Louisiana</option>
+              <option value="Maine">Maine</option>
+              <option value="Maryland">Maryland</option>
+              <option value="Massachusetts">Massachusetts</option>
+              <option value="Michigan">Michigan</option>
+              <option value="Minnesota">Minnesota</option>
+              <option value="Mississippi">Mississippi</option>
+              <option value="Missouri">Missouri</option>
+              <option value="Montana">Montana</option>
+              <option value="Nebraska">Nebraska</option>
+              <option value="Nevada">Nevada</option>
+              <option value="New Hampshire">New Hampshire</option>
+              <option value="New Jersey">New Jersey</option>
+              <option value="New Mexico">New Mexico</option>
+              <option value="New York">New York</option>
+              <option value="North Carolina">North Carolina</option>
+              <option value="North Dakota">North Dakota</option>
+              <option value="Ohio">Ohio</option>
+              <option value="Oklahoma">Oklahoma</option>
+              <option value="Oregon">Oregon</option>
+              <option value="Pennsylvania">Pennsylvania</option>
+              <option value="Rhode Island">Rhode Island</option>
+              <option value="South Carolina">South Carolina</option>
+              <option value="South Dakota">South Dakota</option>
+              <option value="Tennessee">Tennessee</option>
+              <option value="Texas">Texas</option>
+              <option value="Utah">Utah</option>
+              <option value="Vermont">Vermont</option>
+              <option value="Virginia">Virginia</option>
+              <option value="Washington">Washington</option>
+              <option value="West Virginia">West Virginia</option>
+              <option value="Wisconsin">Wisconsin</option>
+              <option value="Wyoming">Wyoming</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="zip">Zip Code</label>
+            <input type="text" class="form-control" id="zipEvent" name="zip"  />
           </div>
           <div class="form-group">
             <label for="guest_limit">Number Of Guests</label>
-            <input type="text" class="form-control" id="guest_limit" name="guest_limit" required />
+            <input type="text" class="form-control" id="guest_limit" name="guest_limit"  />
           </div>
           <div class="form-group">
             <label for="unlimited_guests">No Guest Limit</label>
-            <!-- <input type="hidden" name="event_unlimited" value="false" /> -->
             <input type="checkbox" id="unlimited_guests" name="unlimited_guests" />
           </div>
           <div class="form-group">
             <label for="allow_children">Children Welcome</label>
-            <!-- <input type="hidden" name="event_children" value="false" /> -->
             <input type="checkbox" id="allow_children" name="allow_children" />
           </div>
           <div class="form-group">
             <label for="alcohol_allowed">Alcohol Welcome</label>
-            <!-- <input type="hidden" name="event_alcohol" value="false" /> -->
             <input type="checkbox" id="alcohol_allowed" name="alcohol_allowed" />
           </div><div class="form-group">
             <label for="filter_guests">Guests Need To Be Approved <span class="text-muted">(Cannot Be Changed Once Created)</span></label>
-            <!-- <input type="hidden" name="event_alcohol" value="false" /> -->
             <input type="checkbox" id="filter_guests" name="filter_guests" />
           </div>
           <div class="form-group">
